# cpp_matrix

./: .gitignore  CMakeLists.txt  README.md  a.out  main.cpp
.github/workflows/: cmake-single-platform.yml  cmake_runs_test.yml
NueralNet/: FF_NNet.cpp  FF_NNet.hpp
UNIT_TESTS/: ffnet.cpp  test.cpp
matrix/: matrix.hpp  matrixOperations.hpp
readFile/: readTxtFile.cpp  readTxtFile.hpp
src/NueralNet/: FF_NNet.cpp  FF_NNet.hpp
src/matrix/: functionsToAdd.txt  matrix.hpp  matrixOperations.hpp
src/readFile/: readFile.hpp
tests/: ff_nnet_tests.cpp  test.cpp
